--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
       "~/*": ["src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "__tests__"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
